--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "puzzles",
-  "version": "1.0.0",
-  "description": "Every solution to the codingame puzzles i have done so far",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:benoithuvelle/puzzles.git"
-  },
-  "author": "Benibee",
-  "license": "ISC",
-  "dependencies": {
-    "@babel/eslint-parser": "^7.22.11",
-    "eslint": "^8.48.0"
-  }
+    "name": "puzzles",
+    "version": "1.0.0",
+    "description": "Every solution to the codingame puzzles i have done so far",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "puzzle": "node puzzle.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:benoithuvelle/puzzles.git"
+    },
+    "author": "Benibee",
+    "license": "ISC",
+    "dependencies": {
+        "@babel/eslint-parser": "^7.22.11",
+        "eslint": "^8.48.0"
+    }
 }
