--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "author": "Benibee",
     "license": "ISC",
     "dependencies": {
-        "@babel/eslint-parser": "^7.22.11",
-        "eslint": "^8.48.0"
+        "@babel/eslint-parser": "^7.22.11"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^6.7.3",
+        "@typescript-eslint/parser": "^6.7.3",
+        "eslint": "^8.50.0",
+        "typescript": "^5.2.2"
     }
 }
