--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@babel/core": "^7.23.2",
         "@babel/eslint-parser": "^7.22.11",
+        "vec2": "^1.6.1",
         "webpack": "^5.89.0"
     },
     "devDependencies": {
